<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_instructions"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_back_instructions"
        android:layout_width="@dimen/heart_size"
        android:layout_height="@dimen/heart_size"
        android:background="@drawable/arrow_back"
        android:contentDescription="@string/back_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/original_surfer"
        android:padding="@dimen/instructions_padding"
        android:text="@string/game_instructions"
        android:textAlignment="textStart"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_1"
        android:textStyle="bold"
        tools:context=".InstructionsActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/original_surfer"
        android:padding="@dimen/instructions_padding"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_size_1"
        android:textStyle="bold"
        tools:context=".InstructionsActivity" />

</LinearLayout>