<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameplayActivity">

    <ImageButton
        android:id="@+id/btn_back_gameplay"
        android:layout_width="@dimen/button_size_1"
        android:layout_height="@dimen/button_size_1"
        android:background="@drawable/arrow_back"
        android:contentDescription="@string/back_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/heart1"
            android:layout_width="@dimen/heart_size"
            android:layout_height="@dimen/heart_size"
            android:contentDescription="@string/game_life"
            app:srcCompat="@drawable/heart"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/heart2"
            android:layout_width="@dimen/heart_size"
            android:layout_height="@dimen/heart_size"
            android:contentDescription="@string/game_life"
            app:srcCompat="@drawable/heart"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/heart3"
            android:layout_width="@dimen/heart_size"
            android:layout_height="@dimen/heart_size"
            android:contentDescription="@string/game_life"
            app:srcCompat="@drawable/heart"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/heart4"
            android:layout_width="@dimen/heart_size"
            android:layout_height="@dimen/heart_size"
            android:contentDescription="@string/game_life"
            app:srcCompat="@drawable/heart"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/heart5"
            android:layout_width="@dimen/heart_size"
            android:layout_height="@dimen/heart_size"
            android:contentDescription="@string/game_life"
            app:srcCompat="@drawable/heart"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primary_light">

        <Button
            android:id="@+id/go_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/original_surfer"
            android:onClick="goButtonClickHandler"
            android:text="@string/play_game"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/status_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_end"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/original_surfer"
                android:text="@string/level_label"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/level_display"
                android:layout_width="@dimen/width_1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_1"
                android:fontFamily="@font/original_surfer"
                android:gravity="end"
                android:text="@string/level"
                android:textColor="@color/accent"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/original_surfer"
                android:text="@string/score_label"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/score_display"
                android:layout_width="@dimen/width_1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:fontFamily="@font/original_surfer"
                android:gravity="end"
                android:text="@string/level"
                android:textColor="@color/accent"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>