<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:background="@drawable/ic_cancel_black_24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_start"
            style="@android:style/Widget.Button"
            android:layout_width="@dimen/width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin"
            android:background="@android:color/holo_orange_dark"
            android:fontFamily="casual"
            android:text="@string/play_game"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_instructions"
            style="@android:style/Widget.Button"
            android:layout_width="@dimen/width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:background="@android:color/holo_orange_dark"
            android:fontFamily="casual"
            android:text="@string/instructions"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/high_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/high_score_label"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/high_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/high_score_label"
                android:fontFamily="casual"
                android:text="@string/high_score"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_1">

            <Button
                android:id="@+id/btn_music"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginEnd="@dimen/margin"
                android:background="@drawable/ic_music_note_black_24dp" />

            <Button
                android:id="@+id/btn_sound"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_toEndOf="@id/btn_music"
                android:background="@drawable/ic_volume_up_black_24dp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
